# Spark

./: Cargo.toml  README.md  spark.toml
.github/workflows/: release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  discovery.rs  lib.rs  protocol.rs  tls.rs  toml_read.rs
common/src/deploy/: gateway.rs  handler.rs  mod.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs
daemon/src/deploy/: app_manager.rs  config_loader.rs  database.rs  gateway.rs  handler.rs  health_monitor.rs  hooks.rs  mod.rs
examples/: README.md  auto-health.toml  full-example.toml  nodejs-api.toml  python-api.toml  website.toml
