[package]
name = "spark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
